# oumodulesbot

./: .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cache.json  make_cache.py  mypy.ini  ou_utils.py  oumodulesbot.py  pyproject.toml  requirements.txt  requirements.txt.generate.sh
.github/: dependabot.yml
.github/actions/install-dependencies/: action.yml
.github/workflows/: cc-base-docker-image.yml  docker-image.yml  main.yml
cloudfunctions-cc/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.base1  Dockerfile.base2  interaction.cc  interaction_lib.cc  interaction_lib.h  interaction_lib_test.cc  ou_names.h  project.toml  pubsub_handler.py  vcpkg.json  verify_ed25519.cc  verify_ed25519.h  verify_ed25519_test.cc
cloudfunctions-py/: interaction.py  main.py  project.toml  requirements.txt
oumodulesbot/: backend.py  make_cache.py  make_cache_from_website.py  ou_sparql_utils.py  ou_utils.py  oumodulesbot.py
tests/: test_backend.py  test_oumodulesbot.py
