[tool.black]
line-length = 79
preview = true

[tool.poetry]
name = "oumodulesbot"
version = "0.1.0"
description = ""
authors = ["Jerzy Kozera <jerzy.kozera@gmail.com>"]

[tool.poetry.dependencies]
"discord.py" = "^2.3.1"
python = "^3.12"
pylru = "^1.2.1"
httpx = "^0.26.0"
google-cloud-firestore = "^2.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9"
flake8 = "^6.1"
pytest = "^7"
pytest-asyncio = "^0.23.0"
mypy = "^1.5.1"
isort = "^5.12"

[build-system]
requires = ["poetry>=1.4.0"]
build-backend = "poetry.masonry.api"
