[tool.black]
line-length = 79
preview = true

[tool.poetry]
name = "oumodulesbot"
version = "0.1.0"
description = ""
authors = ["Jerzy Kozera <jerzy.kozera@gmail.com>"]

[tool.poetry.dependencies]
"discord.py" = "^2.4.0"
python = "^3.11"
pylru = "^1.2.1"
httpx = "^0.27.0"
google-cloud-firestore = "^2.12.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.0"
pytest = "^8.3.1"
pytest-asyncio = "^0.23.8"
mypy = "^1.11.1"
isort = "^5.12"

[build-system]
requires = ["poetry>=1.4.0"]
build-backend = "poetry.masonry.api"
