[tool.black]
line-length = 79
preview = true

[tool.poetry]
name = "oumodulesbot"
version = "0.1.0"
description = ""
authors = ["Jerzy Kozera <jerzy.kozera@gmail.com>"]

[tool.poetry.dependencies]
"discord.py" = "^2.4.0"
python = "^3.11"
pylru = "^1.2.1"
httpx = "^0.28.1"
google-cloud-firestore = "^2.19.0"

[tool.poetry.group.dev.dependencies]
black = "^25.0.0"
flake8 = "^7.1.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
mypy = "^1.14.1"
isort = "^5.12"

[build-system]
requires = ["poetry>=1.4.0"]
build-backend = "poetry.masonry.api"
